@@ -5,6 +5,8 @@ python-apt (0.7.7.2) UNRELEASED; urgency=low
     - fix GetCandidateVer() reporting incorrect versions after
       SetCandidateVer() was used. Thanks to Julian Andres Klode for
       the test-case (LP: #237372)
+  * python/apt_instmodule.cc:
+    - do not change working dir in debExtractArchive() (LP: #184093)
   * apt/cache.py:
     - support "in" in apt.Cache() (LP: #251587)
 
